@@ -1,3 +1,7 @@
+Sun May  4 15:15:06 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Sun May  4 15:13:35 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
